# Hermes-Codex-Plugin

./: CHANGELOG.md  README.md
plugins/hermes-codex-plugin/: .mcp.json  README.md  pyproject.toml
plugins/hermes-codex-plugin/.codex-plugin/: plugin.json
plugins/hermes-codex-plugin/hooks/: hooks.json
plugins/hermes-codex-plugin/skills/hermes-codex-plugin/: SKILL.md
plugins/hermes-codex-plugin/src/hermes_codex_plugin/application/common/: __init__.py
plugins/hermes-codex-plugin/src/hermes_codex_plugin/application/memory/: recall.py
plugins/hermes-codex-plugin/src/hermes_codex_plugin/domain/common/: value_objects.py
plugins/hermes-codex-plugin/src/hermes_codex_plugin/domain/memory/: entities.py  policy.py  redaction.py
plugins/hermes-codex-plugin/src/hermes_codex_plugin/domain/skills/: services.py
plugins/hermes-codex-plugin/src/hermes_codex_plugin/infrastructure/: config.py  logging.py
plugins/hermes-codex-plugin/src/hermes_codex_plugin/infrastructure/db/: connect.py
plugins/hermes-codex-plugin/src/hermes_codex_plugin/presentation/: formatting.py
plugins/hermes-codex-plugin/src/hermes_codex_plugin/presentation/cli/: main.py
plugins/hermes-codex-plugin/src/hermes_codex_plugin/presentation/hooks/: controller.py
plugins/hermes-codex-plugin/src/hermes_codex_plugin/presentation/mcp/: server.py
plugins/hermes-codex-plugin/tests/: test_cli.py  test_config.py  test_domain_memory.py  test_domain_skills.py  test_hooks.py  test_mcp_server.py  test_policy.py  test_recall.py  test_skill_miner.py  test_storage.py
(+18 files in other folders)
