[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-codex-plugin"
version = "0.10.2"
description = "Local-first memory for Codex with minimal relevant context to reduce token spend."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Hermes Codex Plugin contributors" }
]
keywords = ["codex", "plugin", "memory", "skills", "sqlite", "fts5", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development"
]
dependencies = [
  "aiosqlite>=0.20,<1",
  "loguru>=0.7,<1",
  "pydantic-settings>=2.4,<3",
  "sqlalchemy>=2,<3"
]

[project.urls]
Homepage = "https://github.com/lyakakoy/hermes-codex-plugin"
Repository = "https://github.com/lyakakoy/hermes-codex-plugin"
Issues = "https://github.com/lyakakoy/hermes-codex-plugin/issues"

[dependency-groups]
dev = [
  "black",
  "isort",
  "pyright"
]

[project.scripts]
hermes-codex-plugin = "hermes_codex_plugin.presentation.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
